Update DESCRIPTION, ChangeLog, and NEWS for gmodels 2.16.1

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,14 @@
+Version 2.16.1 - 2015-07-18
+---------------------------
+
+Bug fixes:
+
+- ci.binom() was using an incorrect method for calcuating binomial
+  conficence intervals.  It now calculates the Clopper-Pearson 'exect'
+  interval, which is *conservative* due to the discrete nature of the
+  binomial distribution.
+
+
 Version 2.16.0 - 2014-07-24
 ---------------------------
 
@@ -41,7 +52,7 @@ Version 2.15.2 - 2012-04-19
 Bug fixes:
 
 - Update est.mer() to work with recent versions of lme4  which changed
-  'mer' objects from S3 to S4 class 
+  'mer' objects from S3 to S4 class
 
 - Changes to pass new R CMD check tests
 
@@ -113,7 +124,7 @@ Bug Fixes:
 	- fix various code/doc inconsistencies
 
 - Problem: estimable() was failing for lmer objects.
-  Solution: 
+  Solution:
 	- Create a generic estimable()
 	- Move old function to estimable.default()
 	- Add  estimable.lmer() to the exported methods list in NAMESPACE
@@ -135,8 +146,8 @@ Version 2.12.0
   function provided by Randall C Johnson.  It is now possible to do
   things like:
 	estimable(reg, c("xB"=1,"xD"=-1))
-  instead of:  
-        estimable(reg, c(    0,   1,	 0,   -1)) 
+  instead of:
+        estimable(reg, c(    0,   1,	 0,   -1))
   which should make estimable() much easier to use for large models.
 
 Version 2.1.0
