- Removed references to 'mer' objects, sincel the nlme4 update is not backwards compatible with my code. - Removed 'require' calls.

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -8,6 +8,10 @@ Bug fixes:
   interval, which is *conservative* due to the discrete nature of the
   binomial distribution.
 
+Other Changes:
+
+- Support for lme4 objects has been removed due to incompatible
+  changes to the lme4 package.
 
 Version 2.16.0 - 2014-07-24
 ---------------------------
